tests/core/ill-typed/extra-tests/multiparameter-functions/bad-add-1.stella
language core;

extend with #multiparameter-functions, #arithmetic-operators;

fn add_fn(n : Nat, m : Bool) -> Nat {
    return n + m
}

fn main(n : Nat) -> Nat {
  return add_fn(n, true)
}
